--- a/Report/tex/intro.tex
+++ b/Report/tex/intro.tex
@@ -1,13 +1,27 @@
-In recent years, Unmanned Aerial Vehicles (UAVs) have been the subject of many research projects and public scrutiny. While fixed wing UAVs have been successfully deployed in several different scenarios \textbf{[citation needed]}, rotor blade ones are still being actively researched and improved upon. Helicopters have long been the preferred type of rotor blade vehicle for manned transportation, mostly due to having a design that has better stability properties \textbf{[citation needed]}. 
+The development of control techniques for Unmanned Aerial Vehicles (UAVs) has been an active research topic over the past years. Furthermore, Event-Triggering strategies have been recurrently studied and applied with encouraging results on reducing the number of computations required for the successful execution of control algorithms. In this thesis, the attitude control of a Quadrotor Helicopter is discussed, with a recently proposed nonlinear controller being implemented on a real system. An Event-Triggering rule for this controller is proposed and tested experimentally.
 
-\textcolor{red}{Develop UAV history. Explain helicopters better. Introduce other rotorblade helicopters}.
+\section{Quadcopter control}
+	In recent years, UAVs have been the subject of many research projects and public scrutiny. While fixed wing UAVs have been successfully deployed in several different scenarios \textbf{[citation needed]}, rotor blade ones are still being actively researched and improved upon. Helicopters have long been the preferred type of rotor blade vehicle for manned transportation. This is due to the fact that single and dual blade helicopters achieve a high level of thrust while maintaining a decent level of power consumption \cite[pp~3-20]{heli-history}. The stability concerns can be addressed mostly through the mechanical design of the rotor blades and associated mechanical systems \cite{heli-stability}\cite{heli-stability2}.
+	\textcolor{red}{Check this out}.
 
-The concept of a quadcopter is not new \textbf{[citation needed]}. It was introduced in \textbf{??} and several models were built since then \textbf{[citation needed]}. It consists on a 'X' or plus shapped frame, with a rotor at each end. Each rotating blade produces air drag that counteracts its movement. To prevent the vehicle from spinning on the opposite direction of the blades direction of rotation, the rotors are assigned in pairs along the same axis of the quadcopter frame, with each pair rotating in opposite directions. The end effect is that, if the thrust produced by each rotor is the same, then the air drags created by one pair are compensated by the other's. Introducing a difference between the rotors thrust in one axis creates a torque around the other one, and creating a difference in each pair's total thrust originates a drag force that makes the frame rotate around itself. 
+	The concept of a quadcopter is not new. The first reported working system was developed in $1907$ \cite{first-quad}, and one of the most successful designs for early helicopter vehicles had precisely a quadcopter-like design \cite{oemichen-quad}. \textcolor{red}{Add more info}.
 
-These easy to understand concepts makes the quadcopter an interesting platform to study, as well as its high maneuverability that makes it an ideal platform for indoors flights \textbf{[citation needed]}. However, its inherently unstable nature prevented it to be used until the recent past \textbf{[citation needed]}. Nowadays, with the availability of inexpensive embedded computers, it is possible to equip these vehicles with onboard controllers that ensure that the system will behave in a desirable manner over a pilot (or autopilot) commands. 
+	A quadcopter helicopter is controlled by changes in the rotation speeds of its four rotors. By increasing the difference in speeds on rotors along the same axis, a torque around the other axis is generated, allowing for changes in the roll and pitch angles of the system. \textcolor{red}{See figure...} Each rotor produces a counteracting torque along its plane of rotation. By making the rotors along the same axis spin in the oposite direction of the rotors in the other axis, those torques are canceled and no torque along the yaw axis is created. To rotate the quad, one needs to increase the difference in speed of the rotors in different axis \textcolor{red}{Figure...}.
 
-One major limitation of quadcopter systems relies in their autonomy \textbf{[citation needed]}. It is common to have a flight autonomy in the order of $10$ to $20$ minutes. This is due to the fact that the four rotor blades configuration is not the most power efficient one \textbf{[citation needed]}. If one wants to introduce an onboard attitude controller, the problem is magnified by the need to constantly having to compute a control signal to give to the motor controllers. One possible solution to reduce the impact of this problem is to try to minimize the number of control input updates by only computing a new control signal when some condition is fulfilled. This is called Event-Triggered control. 
+	These easy to understand concepts and high maneuverability makes the quadcopter an interesting platform to study, from the attitude stabilization of this inherently unstable system \cite{quad_sieg}\cite{quad_hamel} to flight in formation even over complex environments \cite{quad_vijay}. This became possible over the last decade, with the increasing availability of appropriate inertial  measurement units. These, together with onboard control units, allows for attitude control algorithms to run and stabilize the system.
+	
+\section{Event Triggering Framework}
 
-In this project, a saturating controller \cite{lohmann_attitude} is implemented in a quadcopter platform, and an event triggering technique is proposed and tested.
+	Today's control systems are mostly digital, meaning that the control signal is not evolving continuously in time, but instead it needs to be computed at discrete times. Digital control has been extensively studied over the last century \cite{franklin_digital}\cite{astrom_digital}, but solid results were present only for time-triggered systems, where the control is updated at fixed time intervals. Nevertheless, it is known that event-triggered approaches may outperform time-triggered ones, although the analysis becomes more complex \cite{astrom_event2}\cite{astrom_event}. 
+	
+	Some results for event-triggering control of dynamical systems have been derived in recent years, where the event-triggering and feedback rule are derived from a Control Lyapunov Function \cite{castellanos_event}\cite{castellanos_event2}, while others create an event-triggering rule after defining the controller \cite{lehmann_event}\cite{tabuada_event_control}.
+	
+	\textcolor{red}{Mais info, melhor comparação entre abordagens -> requer mais leitura...}
+	
+\section{Problem Formulation}
 
-\textcolor{red}{Develop EVT? More about the project when the project is done...}
+	In this thesis, the Fast and Saturating Attitude controller \cite{lohmann_attitude} is discussed, and an event-triggering rule to work with it is derivated. The main pratical work consists in the implementation of the controller in an \href{http://copter.ardupilot.com/}{Arducopter} platform.
+	
+	The first problem considered will then be how to create an event-triggering rule that ensures the stability of the system with the chosen control rule. Afterwards, considerations about the implementation and performance of the real system need to be addressed.
+
+\section{Thesis Outline}
